@@ -1,4 +1,5 @@
 ﻿Keyboard Shortcuts Manager
+05-Mar-2022: v3.1.0 - Improve Import Shortcuts window - Fix bug with unchecking the shortcuts, Also C#/CSharp issue.
 21-Nov-2021: v3.0.0 - Upgraded to VS2022
 09-Jul-2019: v2.1.0 - Improvements to Import Shortcuts UI
 08-Jul-2019: v2.0.1 - Added Async AutoLoad
